--- a/Home.html
+++ b/Home.html
@@ -28,13 +28,13 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
-                            <a href="./Home.html" class="nav-item nav-link active fw-bold blue" style="color: #4D81BA;">Home</a>
-                            <a href="./Paginas/Comunidad.html" class="nav-item nav-link">Comunidad</a>
-                            <a href="./Paginas/Informacion Gral.html" class="nav-item nav-link">Información General</a>
+                            <a href="./home.html" class="nav-item nav-link active fw-bold blue" style="color: #4D81BA;">Home</a>
+                            <a href="./Paginas/comunidad.html" class="nav-item nav-link">Comunidad</a>
+                            <a href="./Paginas/informaciongral.html" class="nav-item nav-link">Información General</a>
                         </div>
                         <div class="navbar-nav ms-auto">
-                            <a href="./Paginas/Registrarse.html" class="nav-item nav-link">Registrarse</a>
-                            <a href="./Paginas/InicioSesion.html" class="nav-item nav-link">Inicio Sesión</a>
+                            <a href="./Paginas/registrarse.html" class="nav-item nav-link">Registrarse</a>
+                            <a href="./Paginas/inicioSesion.html" class="nav-item nav-link">Inicio Sesión</a>
                         </div>
                     </div>
                 </div>
