--- a/Paginas/InicioSesion.html
+++ b/Paginas/InicioSesion.html
@@ -32,13 +32,13 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
-                            <a href="../Home.html" class="nav-item nav-link">Home</a>
-                            <a href="./Comunidad.html" class="nav-item nav-link">Comunidad</a>
-                            <a href="./Informacion Gral.html" class="nav-item nav-link">Información General</a>
+                            <a href="../home.html" class="nav-item nav-link">Home</a>
+                            <a href="./comunidad.html" class="nav-item nav-link">Comunidad</a>
+                            <a href="./informaciongral.html" class="nav-item nav-link">Información General</a>
                         </div>
                         <div class="navbar-nav ms-auto">
-                            <a href="./Registrarse.html" class="nav-item nav-link">Registrarse</a>
-                            <a href="./InicioSesion.html" class="nav-item nav-link active fw-bold blue" style="color: #4D81BA;"">Inicio Sesión</a>
+                            <a href="./registrarse.html" class="nav-item nav-link">Registrarse</a>
+                            <a href="./inicioSesion.html" class="nav-item nav-link active fw-bold blue" style="color: #4D81BA;"">Inicio Sesión</a>
                         </div>
                     </div>
                 </div>
