cambios nombre home-index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
-                            <a href="./home.html" class="nav-item nav-link active fw-bold blue" style="color: #4D81BA;">Home</a>
+                            <a href="./index.html" class="nav-item nav-link active fw-bold blue" style="color: #4D81BA;">Home</a>
                             <a href="./Paginas/comunidad.html" class="nav-item nav-link">Comunidad</a>
                             <a href="./Paginas/informaciongral.html" class="nav-item nav-link">Información General</a>
                         </div>
