--- a/Paginas/Registrarse.html
+++ b/Paginas/Registrarse.html
@@ -27,7 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="../home.html" class="nav-item nav-link">Home</a>
+                        <a href="../index.html" class="nav-item nav-link">Home</a>
                         <a href="./comunidad.html" class="nav-item nav-link">Comunidad</a>
                         <a href="./informaciongral.html" class="nav-item nav-link">Información General</a>
                     </div>
