--- a/paginas/index.html
+++ b/paginas/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="shortcut icon" href="../img/Logo Bega.png" type="image/x-icon">
-    <link rel="stylesheet" href="../docs/index.html">
+    <link rel="stylesheet" href="../CSS/styleindex.css">
     <title> Migratio/Home </title>
 </head>
 <body>
@@ -29,12 +29,12 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
                             <a href="./index.html" class="nav-item nav-link active fw-bold blue" style="color: #4D81BA;">Home</a>
-                            <a href="./Paginas/comunidad.html" class="nav-item nav-link">Comunidad</a>
-                            <a href="./Paginas/informaciongral.html" class="nav-item nav-link">Información General</a>
+                            <a href="./comunidad.html" class="nav-item nav-link">Comunidad</a>
+                            <a href="./informaciongral.html" class="nav-item nav-link">Información General</a>
                         </div>
                         <div class="navbar-nav ms-auto">
-                            <a href="./Paginas/registrarse.html" class="nav-item nav-link">Registrarse</a>
-                            <a href="./Paginas/inicioSesion.html" class="nav-item nav-link">Inicio Sesión</a>
+                            <a href="./registrarse.html" class="nav-item nav-link">Registrarse</a>
+                            <a href="./inicioSesion.html" class="nav-item nav-link">Inicio Sesión</a>
                         </div>
                     </div>
                 </div>
