--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link rel="shortcut icon" href="../img/Logo Bega.png" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/styleindex.css">
+    <link rel="shortcut icon" href="./img/Logo Bega.png" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/styleindex.css">
     <title> Migratio/Home </title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="m-4">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
-                    <img src="../img/logogrande.png" width="" alt="" class="header_logo">
+                    <img src="./img/logogrande.png" width="" alt="" class="header_logo">
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
                             <a href="./index.html" class="nav-item nav-link active fw-bold blue" style="color: #4D81BA;">Home</a>
-                            <a href="./comunidad.html" class="nav-item nav-link">Comunidad</a>
-                            <a href="./informaciongral.html" class="nav-item nav-link">Información General</a>
+                            <a href="./paginas/comunidad.html" class="nav-item nav-link">Comunidad</a>
+                            <a href="./paginas/informaciongral.html" class="nav-item nav-link">Información General</a>
                         </div>
                         <div class="navbar-nav ms-auto">
-                            <a href="./registrarse.html" class="nav-item nav-link">Registrarse</a>
-                            <a href="./inicioSesion.html" class="nav-item nav-link">Inicio Sesión</a>
+                            <a href="./paginas/registrarse.html" class="nav-item nav-link">Registrarse</a>
+                            <a href="./paginas/inicioSesion.html" class="nav-item nav-link">Inicio Sesión</a>
                         </div>
                     </div>
                 </div>
