--- a/paginas/comunidad.html
+++ b/paginas/comunidad.html
@@ -31,7 +31,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="./index.html" class="nav-item nav-link">Home</a>
+                        <a href="../index.html" class="nav-item nav-link">Home</a>
                         <a href="./comunidad.html" class="nav-item nav-link active fw-bold blue" style="color: #4D81BA;">Comunidad</a>
                         <a href="./informaciongral.html" class="nav-item nav-link">Información General</a>
                     </div>
