--- a/paginas/registrarse.html
+++ b/paginas/registrarse.html
@@ -41,61 +41,60 @@
     </div>
   </header>  
     <br>
-  <main>
-    <section class="planilla__main">
-      <div class="container">
-        <div class="title">Registrate!</div>
-        <div class="content">
-          <form action="#">
-            <div class="user-details">
-              <div class="input-box">
-                <span class="details">Nombre</span>
-                <input type="text" placeholder="Nombre" required>
-              </div>
-              <div class="input-box">
-                <span class="details">Username</span>
-                <input type="text" placeholder="Username" required>
-              </div>
-              <div class="input-box">
-                <span class="details">Email</span>
-                <input type="text" placeholder="Email" required>
-              </div>
-              <div class="input-box">
-                <span class="details">Contraseña</span>
-                <input type="text" placeholder="Contraseña" required>
-              </div>
-              <div class="input-box">
-                <span class="details">Confirmar Contraseña</span>
-                <input type="text" placeholder="Confirmar Contraseña" required>
-              </div>
+  <main class="registroBody">
+    <div class="container">
+      <div class="title">Registrarse</div>
+      <div class="content">
+        <form action="#">
+          <div class="user-details">
+            <div class="input-box">
+              <span class="details">Nombre</span>
+              <input type="text" placeholder="Nombre" required>
             </div>
-            <div class="gender-details">
-              <input type="radio" name="gender" id="dot-1">
-              <input type="radio" name="gender" id="dot-2">
-              <input type="radio" name="gender" id="dot-3">
-              <span class="gender-title">Genero</span>
-              <div class="category">
-                <label for="dot-1">
-                <span class="dot one"></span>
-                <span class="gender">Hombre</span>
+            <div class="input-box">
+              <span class="details">Apellido</span>
+              <input type="text" placeholder="Apellido" required>
+            </div>
+            <div class="input-box">
+              <span class="details">Email</span>
+              <input type="text" placeholder="Email" required>
+            </div>
+            <div class="input-box">
+              <span class="details">Contraseña</span>
+              <input type="text" placeholder="Contraseña" required>
+            </div>
+            <div class="input-box">
+              <span class="details">Confirmar Contraseña</span>
+              <input type="text" placeholder="Confirmar Contraseña" required>
+            </div>
+          </div>
+          <div class="gender-details">
+            <input type="radio" name="gender" id="dot-1">
+            <input type="radio" name="gender" id="dot-2">
+            <input type="radio" name="gender" id="dot-3">
+            <span class="gender-title">Género</span>
+            <div class="category">
+              <label for="dot-1">
+              <span class="dot one"></span>
+              <span class="gender">Hombre</span>
+            </label>
+            <label for="dot-2">
+              <span class="dot two"></span>
+              <span class="gender">Mujer</span>
+            </label>
+            <label for="dot-3">
+              <span class="dot three"></span>
+              <span class="gender">Otro</span>
               </label>
-              <label for="dot-2">
-                <span class="dot two"></span>
-                <span class="gender">Mujer</span>
-              </label>
-              <label for="dot-3">
-                <span class="dot three"></span>
-                <span class="gender">Prefiero no decir</span>
-                </label>
-              </div>
             </div>
-            <div class="button">
-              <input type="submit" value="Registrarse">
-            </div>
-          </form>
-        </div>
+          </div>
+          <div class="button">
+            <input type="submit" value="Registrarse">
+          </div>
+        </form>
       </div>
-    </section>
+    </div>
+  
   </main>
 </body>
 </html>
