--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="shortcut icon" href="./img/Logo Bega.png" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/styleindex.css">
     <title> Migratio/Home </title>
@@ -58,7 +57,7 @@
                 <h1 class="tt"> Conocé nuestra Comunidad</h1>
                 <h3 class="tc"> En nuestra comunidad vas a poder compartir tu experiencia emigratoria o leer la de otras personas!</h3>
                     <button class="boton">
-                        <a href="./Paginas/Comunidad.html"> Conocé Más!</a>
+                        <a href="./paginas/comunidad.html"  class="boton2" style="color: #4D81BA"> Conocé Más!</a>
                     </button>
                 <div class="card1" style="width: 270px; height: 360px; border-radius: 20px;">
                     <div class="card-body">
@@ -96,7 +95,7 @@
                     <h1 class="tt">Países más buscados</h1>
                     <h3 class="tc">Descubrí los países más buscados en nuestra página</h3>
                     <button class="boton">
-                    <a href="./Paginas/Informacion Gral.html"> Ver Más!</a>
+                        <a href="./paginas/informaciongral.html" class="boton2" style="color: #4D81BA"> Ver Más!</a>
                     </button>
                 </div>
                 <div class="australia">
