--- a/paginas/comunidad.html
+++ b/paginas/comunidad.html
@@ -61,6 +61,9 @@
         </form>
       </div>
     </section>
+    <section>
+      
+    </section>
   </main>
   <footer>
     <div class="footer">
