--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <button class="boton">
                         <a href="./paginas/comunidad.html"  class="boton2" style="color: #4D81BA"> Conocé Más!</a>
                     </button>
-                <div class="card1" style="width: 270px; height: 360px; border-radius: 20px;">
+                <div class="card1" style="border-radius: 20px;">
                     <div class="card-body">
                         <img src="./img/Fotoperfil.png" width="" alt="" class="fotoperfil">
                         <h5 class="card-title">Experiencia en EEUU</h5>
@@ -68,7 +68,7 @@
                         El conseguir trabajo fue fácil/difícil dentro de mi área de trabajo. Soy Estudiante, y con un sueldo mínimo se puede vivir y ahorrar aunque eso depende de la vida que quiera llevar cada uno. </p>
                     </div>
                 </div>
-                <div class="card2" style="width: 270px; height: 360px; border-radius: 20px;">
+                <div class="card2" style="border-radius: 20px;">
                     <div class="card-body">
                         <img src="./img/Fotoperfil2.png" width="" alt="" class="fotoperfil">
                         <h5 class="card-title">Experiencia en Francia</h5>
@@ -78,7 +78,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card3" style="width: 270px; height: 360px; border-radius: 20px;">
+                <div class="card3" style=" border-radius: 20px;">
                     <div class="card-body">
                         <img src="./img/Fotoperfil3.png" width="" alt="" class="fotoperfil">
                         <h5 class="card-title">Experiencia en Inglaterra</h5>
