--- a/paginas/inicioSesion.html
+++ b/paginas/inicioSesion.html
@@ -46,29 +46,27 @@
         </div>
     </header>  
     <main>
-        <div class="container">
-            <form action="#">
-                <div class="title">Iniciar Sesión</div>
-                <div class="input-box underline">
-                    <input type="text" placeholder="Ingresa tu Email" required>
-                    <div class="underline"></div>
-                </div>
-                <div class="input-box">
-                    <input type="password" placeholder="Contraseña" required>
-                    <div class="underline"></div>
-                </div>
-                <div class="input-box button">
-                    <input type="submit" name="" value="Iniciar Sesion">
-                </div>
-            </form>
-            <div class="option">o inicia sesión con</div>
-            <div class="twitter">
-                <a href="#"><i class="fab fa-google"></i>Google</a>
+        <main class="registroBody">
+            <div class="container">
+              <div class="title">Inicio Sesión</div>
+              <div class="content">
+                <form action="#">
+                  <div class="user-details">
+                    <div class="input-box">
+                      <span class="details">Email</span>
+                      <input type="text" placeholder="Email" required>
+                    </div>
+                    <div class="input-box">
+                      <span class="details">Contraseña</span>
+                      <input type="text" placeholder="Contraseña" required>
+                    </div>
+                    <div class="button" style="width: 100%;">
+                        <input type="submit" value="Iniciar Sesion">
+                    </div>
+                </form>
+              </div>
             </div>
-            <div class="facebook">
-                <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
-            </div>
-        </div>
+          
     </main>
 </body>
 </html>
